src/objects/Opportunity.object
<CustomObject>
    <fields>
        <fullName>Accessories__c</fullName>
        <label>Accessories</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Account_Number_for_Shipping__c</fullName>
        <label>Account Number for Shipping</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Approved_By__c</fullName>
        <label>Approved By</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Approved_Date__c</fullName>
        <label>Approved Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Approved__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Approved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Auto_Work_Order_Formula__c</fullName>
        <displayFormat>WO#-{00}</displayFormat>
        <label>Auto Work Order Formula</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Budget_Confirmed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Budget Confirmed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Completed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Customer_PO__c</fullName>
        <label>Customer PO</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Data_Loading__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This filed is used for generating Auto Work order Number</description>
        <label>Data Loading</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Date_Entered__c</fullName>
        <label>Date Entered</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Quoted__c</fullName>
        <label>Date Quoted</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Shipped__c</fullName>
        <label>Date Shipped</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Discovery_Completed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Discovery Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Drop_Ship__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Drop Ship</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>End_user_or_Reseller__c</fullName>
        <label>End user or Re seller</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>End User</fullName>
                </value>
                <value>
                    <fullName>Re seller</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Evaluated_By_Drop_Down__c</fullName>
        <label>Evaluated By</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Technicians</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Evaluated_By__c</fullName>
        <label>Evaluated By(N)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Evaluated_Date__c</fullName>
        <label>Evaluated Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Evaluation_Drop_Down__c</fullName>
        <label>Evaluation Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Repairable Standard</fullName>
                </value>
                <value>
                    <fullName>Repairable Moderate</fullName>
                </value>
                <value>
                    <fullName>Repairable Extensive</fullName>
                </value>
                <value>
                    <fullName>Unrepairable Outright</fullName>
                </value>
                <value>
                    <fullName>Unrepairable Exchange</fullName>
                </value>
                <value>
                    <fullName>Unrepairable Use for Parts Only</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Evaluation__c</fullName>
        <label>Evaluation</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>How_Shipped_Drop_box__c</fullName>
        <label>How Shipped</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>FedEx Same Day cross-country with hours</fullName>
                </value>
                <value>
                    <fullName>FedEx Same Day cross-city within hours</fullName>
                </value>
                <value>
                    <fullName>FedEx First Overnight- First thing NBD morning</fullName>
                </value>
                <value>
                    <fullName>FedEx Priority Overnight – NBD morning</fullName>
                </value>
                <value>
                    <fullName>FedEx Standard Overnight – NBD Afternoon</fullName>
                </value>
                <value>
                    <fullName>FedEx 2Day A.M.- 2 BD morning</fullName>
                </value>
                <value>
                    <fullName>FedEx 2Day – 2 BD</fullName>
                </value>
                <value>
                    <fullName>FedEx Saver – 3 BD</fullName>
                </value>
                <value>
                    <fullName>FedEx Ground- 1-7 BD</fullName>
                </value>
                <value>
                    <fullName>FedEx Express International to Canada</fullName>
                </value>
                <value>
                    <fullName>FedEx International Next Flight</fullName>
                </value>
                <value>
                    <fullName>FedEx First Overnight Freight</fullName>
                </value>
                <value>
                    <fullName>FedEx 1Day Freight</fullName>
                </value>
                <value>
                    <fullName>FedEx 2Day Freight</fullName>
                </value>
                <value>
                    <fullName>FedEx 3Day Freight</fullName>
                </value>
                <value>
                    <fullName>FedEx Express Multi-weight pricing</fullName>
                </value>
                <value>
                    <fullName>FedEx International Priority Freight</fullName>
                </value>
                <value>
                    <fullName>FedEx International Economy Freight</fullName>
                </value>
                <value>
                    <fullName>FedEx Custom Critical Freight</fullName>
                </value>
                <value>
                    <fullName>UPS Express Critical – Same Day</fullName>
                </value>
                <value>
                    <fullName>UPS NDA Early- NBD by 8 am</fullName>
                </value>
                <value>
                    <fullName>UPS NDA – NBD by 10:30 am</fullName>
                </value>
                <value>
                    <fullName>UPS NDA Saver – NBD by 3 pm</fullName>
                </value>
                <value>
                    <fullName>UPS 2nd Day Air A.M.- 2 BD by 10:30 am</fullName>
                </value>
                <value>
                    <fullName>UPS 2nd Day Air – 2 BD by end of day</fullName>
                </value>
                <value>
                    <fullName>UPS 3 Day Select – 3 BD by end of day</fullName>
                </value>
                <value>
                    <fullName>UPS Ground – 1-5 BD</fullName>
                </value>
                <value>
                    <fullName>UPS Ground with Freight Pricing- 1-5 BD</fullName>
                </value>
                <value>
                    <fullName>UPS NDA Freight- NBD by Noon or 5 pm</fullName>
                </value>
                <value>
                    <fullName>UPS 2nd Day Air Freight- 2 BD by Noon or 5 pm</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>How_Shipped__c</fullName>
        <label>How Shipped</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Litco_Contact_Drop_Down__c</fullName>
        <label>Litco Contact</label>
        <required>true</required>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Technicians</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Loss_Reason__c</fullName>
        <label>Loss Reason</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Lost to Competitor</fullName>
                </value>
                <value>
                    <fullName>No Budget / Lost Funding</fullName>
                </value>
                <value>
                    <fullName>No Decision / Non-Responsive</fullName>
                </value>
                <value>
                    <fullName>Price</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Original_Warranty_Date__c</fullName>
        <label>Original Warranty Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Point_of_Contact_Text__c</fullName>
        <label>Litco Contact</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ROI_Analysis_Completed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ROI Analysis Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Repair_Sale_Wrnty__c</fullName>
        <label>Repair/Sale/Warranty</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Unrepairable</fullName>
                </value>
                <value>
                    <fullName>Repair</fullName>
                </value>
                <value>
                    <fullName>Sale</fullName>
                </value>
                <value>
                    <fullName>Sale Exchange</fullName>
                </value>
                <value>
                    <fullName>Warranty</fullName>
                </value>
                <value>
                    <fullName>Warranty Exchange</fullName>
                </value>
                <value>
                    <fullName>Loaner</fullName>
                </value>
                <value>
                    <fullName>Exchange</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Repair_Sale__c</fullName>
        <label>Repair/Sale/Wrnty</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Serial__c</fullName>
        <label>Serial #</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ship_by_Date__c</fullName>
        <label>Ship by Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Shipped__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Shipped</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Shipping_Account_Field__c</fullName>
        <label>Shipping Account Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shop_Notes__c</fullName>
        <label>Shop Notes</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Technician_Drop_Down__c</fullName>
        <label>Litco Technician</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Technicians</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Technician_Text__c</fullName>
        <label>Technician</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tested_By__c</fullName>
        <label>Tested By:</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Chris</fullName>
                </value>
                <value>
                    <fullName>Crystal</fullName>
                </value>
                <value>
                    <fullName>Jason</fullName>
                </value>
                <value>
                    <fullName>Jerry</fullName>
                </value>
                <value>
                    <fullName>Julian</fullName>
                </value>
                <value>
                    <fullName>Mike</fullName>
                </value>
                <value>
                    <fullName>Norbert</fullName>
                </value>
                <value>
                    <fullName>Richard</fullName>
                </value>
                <value>
                    <fullName>Vince</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Unit__c</fullName>
        <label>Unit</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Warranty__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Warranty</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Work_Order__c</fullName>
        <label>Work Order</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>AllOpportunities</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>Work_Order__c</columns>
        <columns>Unit__c</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>Repair_Sale_Wrnty__c</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>Date_Shipped__c</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>OPPORTUNITY.PROBABILITY</columns>
        <columns>CORE.USERS.FULL_NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All Work Orders</label>
    </listViews>
    <listViews>
        <fullName>ClosingNextMonth</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>equals</operation>
            <value>NEXT_MONTH</value>
        </filters>
        <label>Closing Next Month</label>
    </listViews>
    <listViews>
        <fullName>ClosingThisMonth</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <label>Closing This Month</label>
    </listViews>
    <listViews>
        <fullName>Customer_Purchase_Order</fullName>
        <booleanFilter>1 AND 2 AND 3 AND 4 AND 5 AND 6 AND 7 AND 8 AND 9</booleanFilter>
        <columns>Work_Order__c</columns>
        <columns>Customer_PO__c</columns>
        <columns>Unit__c</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>Date_Quoted__c</columns>
        <columns>Approved__c</columns>
        <columns>Approved_Date__c</columns>
        <columns>Technician_Text__c</columns>
        <columns>Date_Shipped__c</columns>
        <columns>Ship_by_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Customer_PO__c</field>
            <operation>notEqual</operation>
            <value>null</value>
        </filters>
        <filters>
            <field>Unit__c</field>
            <operation>notEqual</operation>
            <value>null</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.AMOUNT</field>
            <operation>notEqual</operation>
        </filters>
        <filters>
            <field>Date_Quoted__c</field>
            <operation>notEqual</operation>
        </filters>
        <filters>
            <field>Approved__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>Approved_Date__c</field>
            <operation>notEqual</operation>
        </filters>
        <filters>
            <field>Ship_by_Date__c</field>
            <operation>notEqual</operation>
        </filters>
        <filters>
            <field>Shipped__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>Completed__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>Customer Purchase Order</label>
    </listViews>
    <listViews>
        <fullName>Default_Opportunity_Pipeline</fullName>
        <booleanFilter>(1 OR 2)</booleanFilter>
        <filterScope>Mine</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>greaterOrEqual</operation>
            <value>LAST_N_DAYS:30</value>
        </filters>
        <label>Opportunity Pipeline</label>
    </listViews>
    <listViews>
        <fullName>Last_Month_Orders</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>Date_Entered__c</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>Ship_by_Date__c</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Ship_by_Date__c</field>
            <operation>equals</operation>
            <value>LAST_MONTH</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>equals</operation>
            <value>LAST_MONTH</value>
        </filters>
        <label>Last Month Orders</label>
    </listViews>
    <listViews>
        <fullName>MyOpportunities</fullName>
        <filterScope>Mine</filterScope>
        <label>My Opportunities</label>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <columns>Work_Order__c</columns>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>Unit__c</columns>
        <columns>Serial__c</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>Ship_by_Date__c</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews>
    <listViews>
        <fullName>Open_Work_Orders</fullName>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>Work_Order__c</columns>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>Repair_Sale_Wrnty__c</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>Date_Shipped__c</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Completed__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>Shipped__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>Open Work Orders</label>
    </listViews>
    <listViews>
        <fullName>This_Month_Orders</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>Ship_by_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Ship_by_Date__c</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <label>This Month Orders</label>
    </listViews>
    <listViews>
        <fullName>Warranty</fullName>
        <booleanFilter>1 AND 2 AND 3 AND 4 AND 5 AND 6 AND 7 AND 8</booleanFilter>
        <columns>Date_Entered__c</columns>
        <columns>Work_Order__c</columns>
        <columns>Warranty__c</columns>
        <columns>Unit__c</columns>
        <columns>Customer_PO__c</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>Approved__c</columns>
        <columns>Approved_Date__c</columns>
        <columns>Ship_by_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Customer_PO__c</field>
            <operation>notEqual</operation>
        </filters>
        <filters>
            <field>Unit__c</field>
            <operation>notEqual</operation>
        </filters>
        <filters>
            <field>OPPORTUNITY.AMOUNT</field>
            <operation>notEqual</operation>
        </filters>
        <filters>
            <field>Approved__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>Approved_Date__c</field>
            <operation>notEqual</operation>
        </filters>
        <filters>
            <field>Ship_by_Date__c</field>
            <operation>notEqual</operation>
        </filters>
        <filters>
            <field>Date_Quoted__c</field>
            <operation>notEqual</operation>
        </filters>
        <filters>
            <field>Warranty__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Warranty</label>
    </listViews>
    <listViews>
        <fullName>Won</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.WON</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Won</label>
    </listViews>
    <sharingModel>Private</sharingModel>
</CustomObject>